--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="box">
       <h1>ゲーム、バレーボール観戦</h1>
-      <p>APEX, VALORANT, 原神などPCゲームにハマり中!</p>
+      <p>APEX, VALORANT, 原神などPCゲームにハマり中!!!!!</p>
     </div>
   </body>
 </html>
